# Cloak

./: .gitignore  CloakExtraction.py  README.md  __init__.py  cloak.py  main.py  pyproject.toml  requirements.txt
anonymization/: __init__.py  redactor.py  replacer.py
anonymization/strategies/: __init__.py  country_strategy.py  date_strategy.py  default_strategy.py  faker_strategy.py
cloak/: __init__.py  api.py  cli.py  constants.py  extraction_pipeline.py
cloak/anonymization/: __init__.py  redactor.py  replacer.py
cloak/anonymization/strategies/: __init__.py  base.py  country_strategy.py  date_strategy.py  default_strategy.py  faker_strategy.py
cloak/data/: countries.json  replacements.json
cloak/extraction/: __init__.py  chunker.py  extractor.py  parallel_processor.py
cloak/models/: __init__.py  gliner_model.py  gliner_onnx.py
cloak/utils/: __init__.py  cache_manager.py  entity_validator.py  merger.py
docs/: E2E_TESTING.md
extraction/: __init__.py  chunker.py  extractor.py  parallel_processor.py
models/: __init__.py  gliner_onnx.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_batch_redact.py  test_chunker.py  test_merger.py  test_model.py  test_redactor.py  test_validator.py
utils/: __init__.py  cache_manager.py  entity_validator.py  merger.py
