[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloak-ner"
version = "1.0.0"
description = "NER detection, redaction and anonymization pipeline built on GLiNER"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Rohit G"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "onnxruntime>=1.15.0",
    "transformers>=4.38.0,<6.0.0",
    "tokenizers>=0.13.0",
    "faker>=18.0.0",
    "tqdm>=4.64.0",
    "gliner>=0.2.20",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
gpu = [
    "onnxruntime-gpu>=1.15.0",
]

[project.scripts]
cloak = "cloak.cli:main"

[tool.setuptools.packages.find]
include = ["cloak*"]

[tool.setuptools.package-data]
cloak = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
